--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "babel-preset-stage-1": "^6.22.0",
     "jsdom": "^9.9.1",
     "lodash": "^4.17.4",
+    "material-ui": "^0.16.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
