--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-1": "^6.22.0",
+    "eslint": "^3.15.0",
+    "eslint-plugin-react": "^6.9.0",
     "jsdom": "^9.9.1",
     "lodash": "^4.17.4",
     "material-ui": "^0.16.7",
@@ -29,5 +31,12 @@
     "redux": "^3.6.0",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
+  },
+  "devDependencies": {
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-config-airbnb-base": "^11.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2"
   }
 }
